--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.5",
+    "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@heroicons/react": "^2.0.12",
@@ -18,6 +19,8 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stylis": "^4.1.3",
+    "stylis-plugin-rtl": "^2.1.1",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
