--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
