--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@heroicons/react": "^2.0.12",
+    "@types/formidable": "^2.0.5",
     "axios": "^1.1.3",
+    "formidable": "^2.1.1",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "react": "18.2.0",
